--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body
-    style="background-image: url('bg.png');  background-repeat: no-repeat; background-attachment: fixed;background-size: cover;">
+    style="background-image: url('bg-new.png');  background-repeat: no-repeat; background-attachment: fixed;background-size: cover;">
 
     <nav class="navbar fixed-top navbar-expand-lg bg-light navbar-light">
         <div class="container-fluid">
