--- a/index.html
+++ b/index.html
@@ -170,6 +170,9 @@
                         <li>Your ability to be clear and concise</li>
                         <li>Creating figures that are suitable for the audience and are easy to understand</li>
                     </ul>
+                    <ul>
+                        <li>See <a href="https://docs.google.com/document/d/19FS_WsNdHxJw8rrjIzt1FdtHr6uuweMpQ4Wz6QhI00o/edit?usp=sharing">this link</a> for more details.</li>
+                    </ul>
                 </ul>
                 <h4>Submission Details</h4>
                 <p>You are required to submit the following:</p>
