--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                             data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
                                 <ul>
-                                    <li>Nothing's available just yet!</li>
+                                    <li><a href="https://nyu.zoom.us/rec/share/5CBqUv3LB6GslRi5zg9IRdf_Uz2bcdq7_VgiY0sMTy5tJMoI8wZhOiPRAT453gGU.y14GeyLGbYaMV4cJ">Introduction to DSC x WiDS Datathon</a></li>
                                 </ul>
                             </div>
                         </div>
