--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
                     <li>A video presentation (maximum 5 minutes).</li>
                     <li>A notebook including your code (in a polished format!)</li>
                 </ul>
+                <p>Submit using <a href="https://docs.google.com/forms/d/e/1FAIpQLScowocvnM436jovDaMYaYsbW7l2o05ERkHywvtsxcPhSSFCng/viewform">this link</a></p>
             </div>
             <div class="col ">
                 <h3 class="text-center">Topics + Recordings</h3>
@@ -384,7 +385,7 @@
                         <div id="flush-collapseFive" class="accordion-collapse collapse"
                             aria-labelledby="flush-headingFive" data-bs-parent="#accordionFlushExample">
                             <div class="accordion-body">
-                               <p>Not available yet - we will let you know when it's posted!</p>
+                               Submit using <a href="https://docs.google.com/forms/d/e/1FAIpQLScowocvnM436jovDaMYaYsbW7l2o05ERkHywvtsxcPhSSFCng/viewform">this link</a>
                             </div>
                         </div>
                     </div>
